Fixed to deprecated code calls